--- a/index.html
+++ b/index.html
@@ -976,30 +976,7 @@
                       <a href="javascript:void(0);" data-filter="web">Custom
                         Website</a>
                     </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        data-filter="elementor">Elementor</a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);" data-filter="bakery">WP
-                        Bakery</a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        data-filter="avada">Avada</a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);" data-filter="divi">Divi</a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        data-filter="gutenburg">Gutenburg</a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        data-filter="beaver">Beaver</a>
-                    </li>
-                    <li>
+                    
                       <a href="javascript:void(0);"
                         data-filter="others">Others</a>
                     </li>
@@ -1014,11 +991,11 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/portfolio-details.html/"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
-                        <a href="https://barugzai.com/" target="_blank"
+                        <a href="#" target="_blank"
                           rel="nofollow external noopener noreferrer"
                           title="Website Link"><i class="bx bx-link"></i></a>
                       </div>
@@ -1033,11 +1010,11 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/portfolio-details.html"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
-                        <a href="https://www.theradynamics.com/"
+                        <a href="#"
                           rel="nofollow external noopener noreferrer"
                           target="_blank"
                           title="Website Details"><i class="bx bx-link"></i></a>
@@ -1045,17 +1022,17 @@
                     </div>
                   </div>
 
-                  <div class="grid-item" data-filter="elementor">
-                    <img src="assets/img/portfolio/remodel-1.webp"
+                  <div class="grid-item" data-filter="others">
+                    <img src="assets/img/portfolio/barugzai-1.webp"
                       class="img-fluid" alt />
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/portfolio-details.html"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
-                        <a href="https://remodelwithgjk.com/"
+                        <a href="#"
                           rel="nofollow external noopener noreferrer"
                           target="_blank"
                           title="Website Details"><i class="bx bx-link"></i></a>
