--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -155,7 +155,7 @@
               <li><strong>Category</strong>: Custom Website</li>
               <li><strong>Client</strong>: Company Based </li>
                <li><strong>Requirements</strong>: Designed From Scratch</li>
-              <li><strong>Project URL</strong>: <a href="https://barugzai.com/" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
+              <li><strong>Project URL</strong>: <a href="#" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
             </ul>
           </div>
 
@@ -495,7 +495,7 @@
               <li><strong>Category</strong>: Custom Website</li>
               <li><strong>Client</strong>: Company Based </li>
                <li><strong>Requirements</strong>: Designed From Scratch</li>
-              <li><strong>Project URL</strong>: <a href="https://barugzai.com/" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
+              <li><strong>Project URL</strong>: <a href="#" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
             </ul>
           </div>
 
