--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
@@ -1010,7 +1010,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
@@ -1028,7 +1028,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
