--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                       <a href="javascript:void(0);" data-filter="web">Custom
                         Website</a>
                     </li>
-                    
+                    <li>
                       <a href="javascript:void(0);"
                         data-filter="others">Others</a>
                     </li>
@@ -991,7 +991,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/#project01"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
@@ -1010,7 +1010,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/#project02"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
@@ -1028,7 +1028,7 @@
                     <div class="overlay">
                       <div class="portfolio-links">
                         <a
-                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html"
+                          href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html/project03"
                           target="_blank"
                           title="Website Link"><i
                             class="bx bx-folder-plus"></i></a>
