--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -477,7 +477,7 @@
     <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project No : 03</h2>
     <br><br>
     
-    <section id="portfolio-details project03" class="portfolio-details">
+    <section id="portfolio-details projecta" class="portfolio-details">
       <div class="container">
 
         <div class="portfolio-details-container">
