--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
       <div class="hero-container" data-aos="fade-in">
         <h1>Lydia Ashton</h1>
         <p>
-          I'm a
+          I'm 
           <span class="typed"
-            data-typed-items="Assistant Professor, Assistant Professor, Behavioral Economist"></span>
+            data-typed-items="an Assistant Professor, an UW-Madison, a Behavioral Economist"></span>
         </p>
         <div class="btn-cls">
           <a href="https://wa.me/804-4000-0396" class="whatsapp"
             target="_blank"
             rel="nofollow external noopener noreferrer"><i
-              class="bx bxl-whatsapp"></i>Approach Me</a>
+              class="bx bxl-whatsapp"></i> Hire Me</a>
           <a href="assets/img/Haus - Lydia Ashton Résumé.pdf" download
             id="dwnld-btn">Download Resume<i
               class="bx bx-cloud-download"></i></a>
