--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           </p>
         </div>
 
-        <div class="row skills-content">
+        <!-- <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
               <span class="skill">R <i class="val">100%</i></span>
@@ -595,7 +595,261 @@
 
 
           </div>
+        </div> -->
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Summary</h3>
+            <div class="resume-item pb-0">
+              <h4>Lydia Ashton</h4>
+              <p>
+                <em>As a Behavioral Scientist, I turn complex data into clear,
+                  actionable strategies that improve lives. One example is my
+                  work on <b>Social Security Disability Insurance (SSDI)</b>:
+                  I
+                  identified key pain points and delivered policy
+                  recommendations to streamline access to benefits by applying
+                  Natural Language Processing (NLP) and quantitative
+                  ethnography on user-generated content (over 150K discussion
+                  forum posts).</em>
+              </p>
+              <ul>
+                <li>
+                  <a href="mailto:lydia.ashton@gmail.com">lydia.ashton@gmail.com</a>
+                </li>
+                <li><a href="tel:804-4000-0396 ">804-4000-0396</a></li>
+                <li>
+                  <a href="https://www.linkedin.com/in/lydia-ashton-phd/" target="_blank"
+                    rel="nofollow external noopener noreferrer">Linkedin
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Agricultural and Resource Economics (Ph.D.)</h4>
+              <h5>2010 - 2014</h5>
+              <br />
+              <h5><em>Doctor of Philosophy (Ph.D.)</em></h5>
+              <p><em>University of California, Berkeley</em></p>
+              <!-- <p>
+                  <em><b>Major:</b> Microeconomic Theory, Quantitative & Data
+                    Analysis, Policy & Decision-Making, Research & Critical
+                    Thinking, Communication & Presentation, Sustainability & Resource Management
+                  </em>
+                </p> -->
+            </div>
+            <div class="resume-item">
+              <h4>Agricultural and Resource Economics - MS</h4>
+              <h5>2008 - 2010</h5>
+              <br />
+              <h5><em>Master's Degree </em></h5>
+              <p><em>University of California, Berkeley</em></p>
+              <!-- <p>
+                  <em><b>Major:</b> Microeconomic Theory, Quantitative & Data
+                    Analysis, Policy & Decision-Making, Research & Critical
+                    Thinking, Communication & Presentation, Sustainability & Resource Management
+                  </em>
+                </p> -->
+
+              <p></p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Bachelor of Science - BS </h4>
+              <h5>Aug 2002 - Jun 2006</h5>
+              <br />
+              <h5><em> BS, Economics</em></h5>
+              <p><em>Universidad de Monterrey</em></p>
+              <!-- <p>
+                  <em><b>Major:</b> Science</em>
+                </p> -->
+            </div>
+
+            <h3 class="resume-title">Organizations</h3>
+            <div class="resume-item pb-0">
+              <!-- <h4>Danish Rangaiz</h4> -->
+
+              <ul>
+                <li>American Economic Association
+                </li>
+                <li>Economic Science Association
+                </li>
+                <li>Society for Neuroeconomics
+                </li>
+
+              </ul>
+            </div>
+
+            <!-- Languages -->
+            <!-- Languages -->
+            <h3 class="resume-title">Languages</h3>
+            <div class="resume-item pb-0">
+              <!-- <h4>Languages</h4> -->
+              <ul>
+                <!-- <pre></pre> -->
+                <li>English: <i>Native or bilingual proficiency</i></li>
+                <li>Spanish: <i>Native or bilingual proficiency</i></li>
+
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Professional Experience</h3>
+
+            <div class="resume-item">
+              <h4>University of Wisconsin-Madison</h4>
+              <p>
+                <em><b>Position:</b>Assistant Professor</em>
+              </p>
+              <h4>
+              </h4>
+              <h5> Jul 2017 – Current</h5>
+              <p><em> Madison, Wisconsin, United States </em></p>
+
+              <ul>
+                <li>I lead interdisciplinary research using NLP and mixed
+                  methods to analyze large-scale data, delivering actionable
+                  insights to stakeholders. I advance program growth through
+                  innovative teaching and mentoring, shaping the next
+                  generation of behavioral science researchers.</li>
+
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>University of Wisconsin-Madison</h4>
+              <p>
+                <em><b>Position:</b>Postdoctoral Research Fellow</em>
+              </p>
+              <h4>
+              </h4>
+              <h5> Jan 2015 - Jun 2017 </h5>
+              <p><em> Madison, Wisconsin, United States </em></p>
+
+              <ul>
+                <li>I integrated and analyzed large-scale administrative and
+                  private datasets, providing federal agencies with
+                  data-driven insights into the economic impact of foodborne
+                  illnesses. I also designed and executed field experiments
+                  for a nonprofit, evaluating student incentives to promote
+                  healthier food choices in school settings, resulting in
+                  evidence-based program recommendations.</li>
+
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>University of California, Berkeley</h4>
+              <p>
+                <em><b>Position:</b> Doctoral Student</em>
+              </p>
+              <h4>
+                <!-- Seroa Management and Marketing Founder -->
+              </h4>
+              <h5>Jul 2010 - Dec 2014</h5>
+              <p><em>Berkeley, California, United States </em></p>
+
+              <ul>
+                <li>I designed and led large-scale experiments to examine how
+                  hunger and fatigue impact decision-making, overseeing the
+                  entire research lifecycle from pilot testing to data
+                  analysis with 500+ participants. I also conducted
+                  quantitative consumer behavior analysis using grocery
+                  scanner data, creating visualizations and reports that
+                  provided actionable insights for national store chain
+                  executives.
+                </li>
+                <li>
+                  Managed operations for a 500+ enrollment Microeconomics
+                  course and facilitated discussions for a 120+ enrollment
+                  Behavioral Economics course, coordinating instructional
+                  teams, simplifying complex concepts, and ensuring efficient
+                  execution and delivery of materials to improve learning
+                  outcomes.
+
+                </li>
+                <li>
+                  Provided technical support for junior researchers, resolving
+                  coding challenges in MATLAB and Stata and improving their
+                  data analysis and econometrics modeling proficiency.
+                </li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Center for Effective Global Action (CEGA) · Contract</h4>
+              <p>
+                <em><b>Position:</b> Policy and Behavioral Research Consultant
+                </em>
+              </p>
+              <h4>
+                <!-- Seroa Management and Marketing Founder -->
+              </h4>
+              <h5>Jul 2013 - Dec 2013 </h5>
+              <p><em>Berkeley, California, United States · Remote</em></p>
+
+              <ul>
+                <li>
+                  I developed a behavioral economics framework to enhance
+                  reproductive health interventions, improve outcomes, and
+                  guide global policy, synthesizing findings from field
+                  experiments in the Behavioral Economics in Reproductive
+                  Health Initiative report to deliver actionable insights on
+                  family planning and maternal health services for
+                  international policy and research efforts.
+                </li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>National Bureau of Economic Research · Contract </h4>
+              <p>
+                <em><b>Position:</b> Project Oversight Specialist</em>
+              </p>
+              <h4>
+                <!-- Seroa Management and Marketing Founder -->
+              </h4>
+              <h5>Jun 2010 - Aug 2010</h5>
+              <p><em>Mexico City, Mexico </em></p>
+
+              <ul>
+                <li>
+                  Worked closely with the NGO’s project coordinator on behalf of the principal investigator to oversee
+                  field operations, ensuring quality assurance, adherence to research protocols, and alignment with
+                  project goals. Identified and resolved operational challenges, optimized workflows, and facilitated
+                  the successful completion of project milestones under challenging conditions.
+                </li>
+
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Yale University</h4>
+              <p>
+                <em><b>Position:</b> Research Assistant
+                </em>
+              </p>
+              <h4>
+                <!-- Seroa Management and Marketing Founder -->
+              </h4>
+              <h5>Apr 2007 - Jun 2008</h5>
+              <p><em>New Haven, Connecticut, United States </em></p>
+              <ul>
+                <li>
+                  Analyzed large-scale data for studies on retirement savings, social security privatization, and the
+                  impact of income shocks on low-income household consumption patterns. Led operations for international
+                  research, overseeing survey design, recruitment, and researcher training, collecting 750+ surveys in
+                  three days, and delivering a high-impact report that secured over $1M in NIH funding.
+                </li>
+
+              </ul>
+            </div>
+
+
+          </div>
         </div>
+      
       </div>
     </section>
     <!-- End Skills Section -->
