--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills resume" class="resume skills section-bg">
       <div class="container">
         <div class="section-title">
           <h2>Skills</h2>
