--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
     <!-- End Portfolio Section -->
 
     <!-- =======  New Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="container-fluid px-md-4">
           <!-- <div class="row justify-content-center pb-5">
