--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
       <!-- End Skills Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="section-title">
           <h2>Portfolio</h2>
