--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             </div>
           </div> -->
           <div class="row">
-            <div class="filters filter-button-group">
+            <!-- <div class="filters filter-button-group">
               <ul>
                 <li class="active">
                   <a href="javascript:void(0);" data-filter="*">All</a>
@@ -651,7 +651,7 @@
                   <a href="javascript:void(0);" data-filter="others">Others</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
             <div class="row">
               
             <div id="container" class="isotope" data-aos="fade-up" >
