--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
                       <ul>
                         <li><strong>Category</strong>: Custom Website</li>
                         <li><strong>Client</strong>: Company Based </li>
-                         <li><strong>Requirements</strong>: Designed From Scratch</li>
-                        <li><strong>Project URL</strong>: <a href="#" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
+                        <li><strong>External URL</strong>: <a href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
+                        <li><strong>Project URL</strong>: <a href="https://idanishrangaiz.github.io/lydia-ashton/portfolio-details.html" rel="nofollow external noopener noreferrer" target="_blank">Barugzai</a></li>
                       </ul>
                     </div>
           
